--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar class="main-toolbar" routerLink="/">
-  <span>Music Player</span>
+  <span>Dad's Music Player</span>
 </mat-toolbar>
 <router-outlet></router-outlet>
