--- a/src/app/tracks/tracks.component.css
+++ b/src/app/tracks/tracks.component.css
@@ -3,6 +3,7 @@
   font-size: 20px;
   background-color: #8576a9;
   max-width: 80%;
+  height: 64px;
   color: white;
   position: sticky;
   margin-top: 10;
@@ -15,4 +16,47 @@
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
   cursor: pointer;
+}
+
+.track-list {
+  width: 80% !important;
+  margin: auto !important;
+  border-top: 1px solid #564e4e;
+  max-height: 450px;
+  overflow-y: auto;
+  padding: 16px;
+}
+
+.track-photo {
+  width: 54px !important;
+  height: 40px !important;
+  border-radius: 10px;
+}
+
+.track-name {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bolder;
+}
+
+.artist-name {
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  color: black !important;
+}
+
+.active-track {
+  order: 2
+}
+
+@media screen and (max-width: 807px) {
+  .track-list {
+    max-height: 300px;
+  }
+}
+
+@media screen and (min-height: 900px) {
+  .track-list {
+    max-height: 80%;
+  }
 }
