add Favorites component

--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -1,1 +1,28 @@
-<p>favorites works!</p>
+<mat-toolbar class="favorites" *ngIf="favoriteTracks.length === 0">
+  <span>No Favorites!</span>
+</mat-toolbar>
+<div class="player-container">
+  <mat-list class="track-list">
+    <mat-list-item *ngFor="let track of favoriteTracks; let i = index">
+      <img matListItemIcon [src]="track.img" width="57px" height="52px" />
+      <h2 matListItemTitle class="track-name">{{ track.name }}</h2>
+      <h6 matListItemLine class="artist-name">by {{ track.artist }}</h6>
+      <mat-icon
+        matListItemIcon
+        color="primary"
+        style="font-size: 35px"
+        *ngIf="favoriteTracks.indexOf(this.state.activeTrack) === i"
+        fontIcon="headphones"
+      ></mat-icon>
+      <mat-icon
+        matListItemIcon
+        *ngIf="track.isFavorite === true"
+        matTooltip="Remove from favorites list"
+        (click)="removeFromFavorites(i)"
+        class="favorite-icon"
+        >favorite</mat-icon
+      >
+      <mat-divider></mat-divider>
+    </mat-list-item>
+  </mat-list>
+</div>
