--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -5,12 +5,15 @@
   <mat-list class="track-list">
     <mat-list-item *ngFor="let track of favoriteTracks; let i = index">
       <img matListItemIcon [src]="track.img" width="57px" height="52px" />
-      <h2 matListItemTitle class="track-name">{{ track.name }}</h2>
-      <h6 matListItemLine class="artist-name">by {{ track.artist }}</h6>
+      <h2 matListItemTitle class="track-name" (click)="playTrack(track)">
+        {{ track.name }}
+      </h2>
+      <h6 matListItemLine class="artist-name" (click)="playTrack(track)">
+        by {{ track.artist }}
+      </h6>
       <mat-icon
         matListItemIcon
-        color="primary"
-        style="font-size: 35px"
+        class="active-track"
         *ngIf="favoriteTracks.indexOf(this.state.activeTrack) === i"
         fontIcon="headphones"
       ></mat-icon>
